# afni

./: .travis.yml  CMakeLists.txt  Dockerfile
src/: CMakeLists.txt  Makefile.INCLUDE  afni_history_rickr.c  niml_tool.c
src/3DEdge/: CMakeLists.txt
src/3DEdge/src/: CMakeLists.txt
src/Audio/: CMakeLists.txt
src/SUMA/: CMakeLists.txt
src/XmHTML/: CMakeLists.txt
src/XmHTML/lib/: CMakeLists.txt
src/avovk/: CMakeLists.txt
src/converted_from_fortran/: CMakeLists.txt
src/coxplot/: CMakeLists.txt
src/eispack/: CMakeLists.txt
src/nifti/: CMakeLists.txt
src/nifti/niftilib/: CMakeLists.txt
src/niml/: CMakeLists.txt  nimlConfig.cmake  niml_element.c
src/ptaylor/: CMakeLists.txt
src/qhull/: CMakeLists.txt
src/rickr/: CMakeLists.txt
src/svm/: CMakeLists.txt
src/volpack/: CMakeLists.txt
tests/: CMakeLists.txt
