set(CONVERTED_FROM_FORTRAN_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}")
set(CONVERTED_FROM_FORTRAN_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)

file(GLOB CONVERTED_FROM_FORTRAN_SRCS "*.c")
message(${CONVERTED_FROM_FORTRAN_SRCS})
message(${CONVERTED_FROM_FORTRAN_INCLUDE_DIRS})
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/gram.c)
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/qbitbits.c)
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/qbitshft.c)
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/pow_qq.c)
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/xsum.c)
list(REMOVE_ITEM CONVERTED_FROM_FORTRAN_SRCS  ${CMAKE_CURRENT_SOURCE_DIR}/Fmain.c)

add_library(converted_from_fortran ${CONVERTED_FROM_FORTRAN_SRCS})

target_include_directories(converted_from_fortran PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
# ${NIML_INCLUDE_DIRS} ${RICKR_INCLUDE_DIRS} ${NIFTI_INCLUDE_DIRS})

