cmake_minimum_required(VERSION 2.6)
project(volpack)

set(VOLPACK_LIBRARIES volpack PARENT_SCOPE)

file(GLOB CSRC "*.c")

add_library(volpack ${CSRC})
install(TARGETS volpack
       RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
       LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
       PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
) 

